Adding a more concrete templating example

--- a/templates/players.html
+++ b/templates/players.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Players</title>
-    <link rel="stylesheet" href="/css/style.css">
-  </head>
-  <body>
-    <main>
-      <h1>Players</h1>
-    </main>
+{% extends 'base.html' %}
 
-    <script src="/js/main.js" type="module"></script>
-  </body>
-</html>
+{% block title %}Players{% endblock %}
+
+{% block content %}
+
+<h1>Player content here</h1>
+
+{% endblock %}
