Player and Umlaut test

--- a/templates/players.html
+++ b/templates/players.html
@@ -6,4 +6,10 @@
 
 <h1>Player content here</h1>
 
+<ul>
+  {% for player in player_list %}
+  <li>{{ player }}</li>
+  {% endfor %}
+</ul>
+
 {% endblock %}
